apps/minio/components/istio/istio-destinationrule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: minio
spec:
  host: minio.rs.soeren.cloud
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        loadBalancer:
          simple: LEAST_CONN
