apps/minio/components/istio/istio-virtualservice-console.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio-console
spec:
  hosts:
    - minio-console.rs.soeren.cloud
  gateways:
    - istio-system/gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - minio-console.rs.soeren.cloud
      route:
        - destination:
            host: minio
            port:
              number: 9001
