apps/minio/components/istio/istio-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio
spec:
  hosts:
    - minio.rs.soeren.cloud
  gateways:
    - istio-system/gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - minio.rs.soeren.cloud
      route:
        - destination:
            host: minio
            port:
              number: 9000
